[package]
name = "wgpu-alife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13"
bytemuck = { version = "1.4", features = [ "derive" ] }
pollster = "0.2"
winit = "0.26"
rand = "0.7"
gif = "0.11"
anyhow = "1.0"
futures-intrusive = "0.4"
